tried adding image support to product upload

--- a/carrinho-final/novoProduto.html
+++ b/carrinho-final/novoProduto.html
@@ -8,6 +8,7 @@
     <form id="formProduto">
         Nome Produto: <input type="text" name="produto" /> <br>
         Preço: <input type="number" name="preco" /> <br>
+        <input type="file" id="arquivo" accept=".png" /><br><br>
         <button type="button" onclick="addProduto()">Adicionar Produto</button>
     </form>
     
