--- a/carrinho-final/novoProduto.html
+++ b/carrinho-final/novoProduto.html
@@ -2,7 +2,7 @@
   <head>
       <meta charset='utf-8'>
       <title>Novo Produto</title>
-      <script src='js/index.js'></script>
+      <script src='js/addProd.js'></script>
   </head>
   <body>
     <form id="formProduto">
