--- a/carrinho-final/index.html
+++ b/carrinho-final/index.html
@@ -1,14 +1,19 @@
 <html>
     <head>
-        <meta charset="UTF-8" />
-        <link rel="stylesheet" href="css/index.css" />
-        <script defer src="js/index.js"></script>
-
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- fonte -->
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <script src="js/index.js" defer></script>
     </head>
     <body>
-        <div id="produtos"></div>
-        <button id="botaoAddProduto" onclick="trocarPag1()">Adicionar produto</button>
-        <button id="botaoRemoveProduto" onclick="trocarPag2()">Remover produto</button>
+        <div class="container">
+            <div class="produtos-container" id="produtos-container"></div>
+        </div>
+        <a href="novoProduto.html"  class="botaoAddProduto">Adicionar produto</a>
+        <a href="removerProduto.html" class="botaoRemoveProduto">Remover produto</a>
         <button onclick="limparCarrinho()">Limpar Carrinho</button>
         <span id="total"></span>
 
