--- a/carrinho-final/removerProduto.html
+++ b/carrinho-final/removerProduto.html
@@ -1,12 +1,14 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="css/index.css" />
+        <link rel="stylesheet" href="css/style.css" />
         <script defer src="js/remove.js"></script>
 
     </head>
     <body>
-        <div id="produtosRemove"></div>
+        <div class="container">
+            <div id="produtosRemove" class="produtosRemove"></div>
+        </div>
     </body>
 </html>
 
