--- a/carrinho-final/adm.html
+++ b/carrinho-final/adm.html
@@ -15,6 +15,9 @@
             <input type="file" id="arquivo" accept=".png" /><br><br>
             <button type="button" class="button" onclick="addProduto()">Adicionar Produto</button>
         </form>
+        <a href="removerProduto.html">
+          <button class="button">Remover Produtos</button>
+        </a>
         </div>
     </div>
 </body>
